Fixed notifications for compact mode with collapsed sidebar

--- a/stylus/framework/chat-themes.styl
+++ b/stylus/framework/chat-themes.styl
@@ -61,11 +61,12 @@ body.client-style-compact
 			top: 25px
 		.fl-notification,
 		.fl-mention
-			margin-right: 3px
-			margin-top: 1px
-			padding: 0px 5px
-			line-height: 17px
-			height: 17px
+			margin-right: 3px;
+			margin-top: -1px;
+			padding: 2px 5px 1px 4px;
+			line-height: 17px;
+			height: 20px;
+			min-width: 18px;
 
 	&.nav-style-collapsed .client
 		.org-area-bg-compact,
@@ -110,6 +111,14 @@ body.client-style-compact
 				padding: 7px 0 6px 0 !important
 			.room-face
 				font-size: 0.9em
+			.fl-notification,
+			.fl-mention
+				margin-right: 7px;
+				margin-top: 0px;
+				padding: 0px 3px 0px 3px;
+				line-height: 17px;
+				height: 17px;
+				min-width: 16px;
 
 
 body.client-style-compact
